welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var c:Int
    ^sumDouble:3: error: value ~= is not a member of Integer
if(a~=b){
    ^